[tool.poetry]
name = "factscore"
version = "0.2.0"
description = "FactScore is an automatic evaluation metric for factual precision in long-form text generation. It uses large language models and retrieval to break down generations into atomic facts and then measure the correctness with respect to a knowledge source (like Wikipedia)."
authors = ["Sewon Min <sewon@cs.washington.edu>", "Kalpesh Krishna <kalpesh@cs.umass.edu>", "Xinxi Lyu <alrope@cs.washington.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "*"
sentence-transformers = "*"
transformers = "*"
openai = "*"
rank-bm25 = "*"
spacy = "*"
pysqlite-binary = "*"
nltk = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
